# buildscale-ai

./: .dockerignore  .gitignore  AGENTIC_FLOW_OUTPUT.txt  Dockerfile  README.md  docker-build.sh  docker-compose.yml  frontend-build.sh
backend/: .env.example  .gitignore  CLAUDE.md  Cargo.toml  TODO_SECURITY.md  TODO_SECURITY_REFRESH_TOKEN.md
backend/.sqlx/: query-037887889fb2d3dcae2d78fc25a1736cd616f64382fd0a37364a9b5784ca494e.json  query-03e645598fb59b020877458708db0368328850ebac34b01df945548c3874ee9e.json  query-044dfd5ea7d9a50abc33fbd5c54af24798d09273519d204f43907d8a16a55b1a.json  query-046f5dbda0a2fb868cf7f99c509354e7919c4c097e32f7e332b77b2e18bdffb0.json  query-0812c20398c0a8bbbb99e7099e3f83dd66b262bf47d7bb640bfabf8808c08eb2.json  query-0b4cbf1a3576c55e943acd5f9e089f28c8d75aebf1890486d4abda96c01d0a48.json  query-0d727de430e6ede910977dc2816b9556b3975ce328e36353d96d12355842bcce.json  query-0da27fcf38701c7019c2eaf08c223f40b3abee13b7d1e7f271dbc86ecd902618.json  query-10307214fd6f2753ab1e7a838aa3d6d1d4df43509f8f6019b0fde4c317c7bf3c.json  query-11723baab185034f95f5c68fb28de05475ec1ead6c4efeb3cfaf7d91920d6871.json  query-11e1335a33b44f073b25124807c5916c7cee9c1cb1594861dca8dd1851a0eebb.json  query-1308c2852a7e3e2ef11f06b0a2bc5424ccaee5ec4a45c5879ac701d44f84db0f.json  query-134b8eb36af15b3551a4e7063e4c4677e440f6241c564df4c4c365b4a75ef222.json  query-175ba4445fdff89b4ef6e790bc96c9f588318167a40be632670de04c2f8e75ad.json  query-186a3087c028c3e257ceb5c6067aaedea5d17f62e69550367c9a86ea4346a25c.json  query-19e627ba75ef257354d43cb258c07efdd6cd31c43c869a618d791aa80cdf6a4a.json  query-1a4dcc11e241ae2cf5582233fc86e7659510dfaed4dba72f7f96e5a9b5c630a6.json  query-1a665838d1442d1b2137ff3b7aa7b4c4d944df564f6e26a05bd068a6938c0968.json  query-1b4424b2af3362b32a83d7ac092eb6ea21d30c76891d84ce113b92cc7a5b7293.json  query-1c4c3d6a4947304b730b3caf30dc91222405ae69d5cf1555cf2c432d64d8ce84.json  query-1c564481df7a8c98a7ef1ef68435b206d5463e73f8d102bc18025e80e3fd5173.json  query-1d2a4591ea4a8b6cd321fb7fc44e8f9b3e3170a29dfb15bb6915954389d2efa9.json  query-21ea3b0a15211f5475b338efabc4e73245e1aff12c1fc2ad2f97f1d1013651d6.json  query-21f6ce95253eaf4afc51174dfb74a9b113203def1a56bd035d109a854032f59e.json  query-236afebedfc486b9c963e3f028f4ed06f02d86cb530906a46b832535fc36bdc0.json  query-24240ec475edc36c4aa6266c62625f823a83886c1489267bcb9a0795c1a42232.json  query-2461e06a2fa8df8288da2e5e4831aff850a2b905680f8766528ba979b61287d7.json  query-24e565e0a2bc314ba16cd632fc7968e903dbf64e4f1c8ddf74ff06eb037da860.json  query-2599217dff6980d96a510aee7f7a983a862a2751ec884f2dba912a3ffbb49cea.json  query-26fb159a14d8ff49c0c0ff3b48c0038d990c36b93510577e534c575491794277.json  query-2773b96cfdeb9f1ddd11b982a4179da58aaa3695f66fc11bb2e44251788f1495.json  query-29389aed50bd309e2f9051d1667694260ad9facd62237828bdc0747d4f628e82.json  query-294204300512f45c378f1326af316e2789d8deec3a34b53acf6c624bb885de0f.json  query-29a32cd9dbd91d533270a4d8e07483ebade8a3e580dec1781116c2796feecb98.json  query-29a8b6d555664ca2e9c8a3c3a888f33380ff9626fbf25d9451bcaf9fcfbd1550.json  query-29f8ff18a4c4e667a3b5a18693327c0e6d462bcc203a6ba6cfa05e8e22388ead.json  query-2aabc2c2b8806a4680aad675d0101d5c70dfd1a1c27689985d30ff096387cb98.json  query-2acf7b3190210105d2e18f87135697985f2bdd9a863f8d9c0e952046820f8849.json  query-2b32db30ab48dde18dcbe9cc68faf4fd42825edd30631e4a7f463fe2bec7f46f.json  query-2b39ae9b495baf6a63148925c124a3c581ce9562f2340e5957ffcd8c33ad702b.json  (+201 more)
backend/buildscale/: Cargo.toml
backend/docs/: AGENTIC_ENGINE.md  AGENT_STATE_MACHINE.md  AGENT_SWARMS.md  AI_PROVIDERS.md  API_GUIDE.md  API_IMPLEMENTATION_PLAN.md  ARCHITECTURE.md  AUTHENTICATION.md  CACHE.md  CHAT_PERSISTENCE_AUDIT.md  CONFIGURATION.md  CONTEXT_CACHING.md  CONTEXT_ENGINEERING.md  EVERYTHING_IS_A_FILE.md  EXAMPLES_AND_TEST_GUIDE.md  FILES_ARE_ALL_YOU_NEED.md  LEARNING_PATH.md  MEMORY_TOOLS.md  PLAN_MODE.md  PLAN_TOOLS.md  README.md  REST_API_GUIDE.md  RIG_INTEGRATION.md  RIG_SOURCE_CODE_COMPLETE.md  ROLE_MANAGEMENT.md  TODO_AGENTIC.md  (+8 more)
(+430 files in other folders)
