[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.18"
dotenvy = "0.15.7"
password-hash = "0.5.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "migrate", "json", "uuid", "macros"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync", "signal", "time", "fs"] }
uuid = { version = "1.18.1", features = ["serde", "v7"] }

[dev-dependencies]
nanoid = "0.4.0"
tokio-test = "0.4.4"
