[package]
name = "buildscale"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
argon2 = "0.5.3"
axum = "0.8.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.19"
dotenvy = "0.15.7"
hex = "0.4"
http = "1.3"
hmac = "0.12"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
password-hash = "0.5.0"
rand = "0.9"
regex = "1"
scc = "3"
secrecy = { version = "0.10.3", features = ["serde"] }
subtle = "2.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sha2 = "0.10"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "migrate", "json", "uuid", "macros"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "sync", "signal", "time", "fs"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "set-header", "request-id", "fs", "compression-gzip"] }
uuid = { version = "1.19.0", features = ["serde", "v7"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
nanoid = "0.4.0"
tokio-test = "0.4.5"
reqwest = { version = "0.13", features = ["json", "cookies"] }
