[package]
name = "buildscale"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
argon2 = "0.5.3"
axum = "0.8.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.19"
dotenvy = "0.15.7"
hex = "0.4"
http = "1.3"
hmac = "0.12"
indexmap = { version = "2.7", features = ["serde"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
rig-core = { version = "0.29", default-features = false, features = ["reqwest-rustls", "derive"] }
futures = "0.3"
password-hash = "0.5.0"
rand = "0.9"
regex = "1"
scc = "3"
tokio-stream = { version = "0.1", features = ["sync", "time"] }
schemars = { version = "0.8.21", features = ["uuid1", "chrono"] }
secrecy = { version = "0.10.3", features = ["serde"] }
subtle = "2.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_jcs = "0.1"
sha2 = "0.10"
bytes = "1"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "migrate", "json", "uuid", "macros"] }
pgvector = { version = "0.4.0", features = ["sqlx", "serde"] }
strum = "0.26"
strum_macros = "0.26"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "sync", "signal", "time", "fs"] }
tokio-util = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "set-header", "request-id", "fs", "compression-gzip"] }
uuid = { version = "1.19.0", features = ["serde", "v7"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
nanoid = "0.4.0"
tokio-test = "0.4.5"
reqwest = { version = "0.13", default-features = false, features = ["json", "cookies", "stream", "rustls"] }
